2000-02-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mappers.cc (xconj, ximag, xreal): New functions.  Use them in
	DEFUN_MAPPER calls.

	* defun-int.h (DEFUN_MAPPER_INTERNAL): Cast function pointer args
	to octave_mapper constructor.

2000-02-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* procstream.cc (procstreambase::procstreambase,
	procstreambase::open, procstreambase::close):
	Call std::ios::setstate, not set.

	* lex.l (plot_axes_token): Declare plot_axes as const char *.
	Declare tmp const char **.

	* oct-procbuf.h: Include fstream, not streambuf.h.

	* load-save.cc (Fsave): Call pubseekoff instead of seekoff.	
	* oct-strstrm.cc (octave_base_strstream::tell): Likewise.
	(octave_base_strstream::seek): Likewise.

	* oct-stream.cc (octave_base_stream::read): Rename count to char_count.
	(octave_base_stream::do_gets): Likewise.

	* octave-stream.cc (octave_base_stream::write): Rename flt_fmt to ffmt.
	(octave_base_stream::read): Likewise.

	* TEMPLATE-INST/SLStack-sym.cc: Delete meaningless `extern
	template' declarations.
	* TEMPLATE-INST/Array-tc.cc: Ditto.

	* TEMPLATE-INST/Map-fnc.cc: Don't try to instantiate goodCHptr or
	CHptr_to_index here.
	* TEMPLATE-INST/Map-tc.cc: Likewise.
	* Map.h (CHNode::goodCHptr, CHNode::CHptr_to_index): Now member
	functions.  Change all callers.

	* load-save.cc (read_binary_file_header): Declare magic_len `const'.

	* token.h (token::token (const token&), token::operator=):
	Delete unnecessary definitions.

	* oct-stream.cc (octave_stream::mode_as_string): Use
	std::ios::binary, not std::ios::bin.
	* load-save.cc (Fsave, Fload, save_user_variables): Likewise.

	* DLD-FUNCTIONS/qz.cc (Fqz): Use Array<int> class instead of
	trying to create automatic int array with variable size.

	* variables.cc (F__dump_symbol_info__): Fix continuation char.
	* mappers.cc (Ftoupper): Likewise.
	* DLD-FUNCTIONS/besselj.cc (Fairy, Fbesselj): Likewise.
	* DLD-FUNCTIONS/chol.cc (Fchol): Likewise.
	* DLD-FUNCTIONS/det.cc (Fdet): Likewise.